--- a/views/ajustes.html
+++ b/views/ajustes.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/themes/default.min.css">
+  <link rel="stylesheet" href="../css/alertify.min.css">
   <title>Inicio</title>
 </head>
 <body>
@@ -63,7 +65,7 @@
         </div>
         <div class="custom-file">
           <input type="file" class="custom-file-input" id="inputGroupFile01">
-          <label class="custom-file-label" name="imagen" id="imagen" for="inputGroupFile01">Buscar archivo</label>
+          <label class="custom-file-label" name="imagen" id="foto" for="inputGroupFile01">Buscar archivo</label>
         </div>
       </div>
     </form>
@@ -75,24 +77,27 @@
       <div class="form-group row">
         <label for="staticEmail" class="col-sm-2 col-form-label">Nueva Contraseña</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control-plaintext" id="staticEmail" value="email@example.com">
+          <input type="password" class="form-control" id="contrasena" placeholder="Password">
         </div>
       </div>
       <div class="form-group row">
         <label for="inputPassword" class="col-sm-2 col-form-label">Repetir Contraseña</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+          <input type="password" class="form-control" id="contrasenaVerificar" placeholder="Password">
         </div>
       </div>
       <button type="button" class="btn btn-primary">Cambiar</button>
     </form>
 
   </section>
-
+  <br><br><br>
   <!-- SCRIPT -->
   <script src="../js/jquery-3.3.1.min.js" type="text/javascript"></script>
   <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="../js/alertify.min.js" type="text/javascript"></script>
+  <script src="../js/js.cookie.js" type="text/javascript"></script>
   <!-- VISTAS -->
+  <script src="../js/validation.js" type="text/javascript"></script>
   <script src="../js/navegation.js" type="text/javascript"></script>
   <script src="../js/views/ajustes.js" type="text/javascript"></script>
 </body>
