--- a/views/descubre.html
+++ b/views/descubre.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/themes/default.min.css">
+  <link rel="stylesheet" href="../css/alertify.min.css">
   <title>Inicio</title>
 </head>
 <body>
@@ -73,7 +75,10 @@
   <!-- SCRIPT -->
   <script src="../js/jquery-3.3.1.min.js" type="text/javascript"></script>
   <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="../js/alertify.min.js" type="text/javascript"></script>
+  <script src="../js/js.cookie.js" type="text/javascript"></script>
   <!-- VISTAS -->
+  <script src="../js/validation.js" type="text/javascript"></script>
   <script src="../js/navegation.js" type="text/javascript"></script>
   <script src="../js/views/descubre.js" type="text/javascript"></script>
 </body>
