--- a/views/login.html
+++ b/views/login.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/themes/default.min.css">
+  <link rel="stylesheet" href="../css/alertify.min.css">
   <title>Inicio</title>
 </head>
 <body>
@@ -16,20 +18,22 @@
 
     <form action="/api/iniciar" method="post">
       <label for="usuario">Usuario:</label>
-      <input type="text" class="form-control" name="usuario" id="usuario" placeholder="Escriba Usuario" data-type="username" required>
+      <input type="text" class="form-control" name="usuario" id="usuario" placeholder="Escriba Usuario" data-type="usuario">
       <label for="contrasena">Contraseña:</label>
-      <input type="password" class="form-control" name="contrasena" id="contrasena" placeholder="Escriba contraseña" data-type="password" required>
+      <input type="password" class="form-control" name="contrasena" id="contrasena" placeholder="Escriba contraseña" data-type="contrasena">
 
       <hr class="my-4">
-      <p id="error">Texto de errores</p>
-      <button type="submit" class="btn btn-primary">Ingresar</button>
+      <button type="button" id="btn_login" class="btn btn-primary">Ingresar</button>
     </form>
   </section>
 
   <!-- SCRIPT -->
   <script src="../js/jquery-3.3.1.min.js" type="text/javascript"></script>
   <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="../js/alertify.min.js" type="text/javascript"></script>
+  <script src="../js/js.cookie.js" type="text/javascript"></script>
   <!-- VISTAS -->
+  <script src="../js/validation.js" type="text/javascript"></script>
   <script src="../js/navegation.js" type="text/javascript"></script>
   <script src="../js/views/login.js" type="text/javascript"></script>
 </body>
