--- a/views/usuario/crear.html
+++ b/views/usuario/crear.html
@@ -18,11 +18,11 @@
   </section>
 
   <section class="container">
-    <form>
+    <form novalidate>
       <label for="usuario">Nombre de usuario: <span class="req">*</span></label>
-      <input type="text" class="form-control" id="usuario" name="usuario" placeholder="Nombre de Usuario" required>
+      <input type="text" class="form-control" id="usuario" name="usuario" placeholder="Nombre de Usuario" data-type="usuario" required>
       <label for="contrasena">Contrasena: <span class="req">*</span></label>
-      <input type="password" class="form-control" id="contrasena" name="contrasena" placeholder="Contrasena de Usuario" required>
+      <input type="password" class="form-control" id="contrasena" name="contrasena" placeholder="Contrasena de Usuario" data-type="contrasena" required>
 
       <br>
 
@@ -39,7 +39,9 @@
   <script src="../../js/jquery-3.3.1.min.js" type="text/javascript"></script>
   <script src="../../js/bootstrap.min.js" type="text/javascript"></script>
   <script src="../../js/alertify.min.js" type="text/javascript"></script>
+  <script src="../../js/js.cookie.js" type="text/javascript"></script>
   <!-- VISTAS -->
+  <script src="../../js/validation.js" type="text/javascript"></script>
   <script src="../../js/subnavegation.js" type="text/javascript"></script>
   <script src="../../js/views/usuario/crear.js" type="text/javascript"></script>
 </body>
