--- a/views/usuario/eliminar.html
+++ b/views/usuario/eliminar.html
@@ -34,7 +34,9 @@
   <script src="../../js/jquery-3.3.1.min.js" type="text/javascript"></script>
   <script src="../../js/bootstrap.min.js" type="text/javascript"></script>
   <script src="../../js/alertify.min.js" type="text/javascript"></script>
+  <script src="../../js/js.cookie.js" type="text/javascript"></script>
   <!-- VISTAS -->
+  <script src="../../js/validation.js" type="text/javascript"></script>
   <script src="../../js/subnavegation.js" type="text/javascript"></script>
   <script src="../../js/views/usuario/eliminar.js" type="text/javascript"></script>
 </body>
