--- a/views/perfil.html
+++ b/views/perfil.html
@@ -25,18 +25,18 @@
 
   <section class="jumbotron">
     <img id="foto" class="d-block mx-auto" src="../img/perfil.png" alt="Foto de usuario" />
-    <h1 class="display-6 text-center">fernando</h1>
+    <h1 class="display-6 text-center" id="usuario">DEFAULT</h1>
   </section>
 
   <section class="container">
     <h4>Nombre: </h4>
-    <p>Manuel Fernando</p>
+    <p id="nombre">DEFAULT</p>
+    <h4>Apellidos: </h4>
+    <p id="apellidos">DEFAULT</p>
     <h4>Correo: </h4>
-    <p>fernando@gmail.com</p>
+    <p id="correo">DEFAULT</p>
     <h4>Curriculum: </h4>
-    <p>
-      Estudiante de CUCEI
-    </p>
+    <p id="curriculum">DEFAULT</p>
   </section>
 
   <!-- SCRIPT -->
