No te puedes borrar a ti mismo, encriptado, y otras cositas.

--- a/views/vista/linea.html
+++ b/views/vista/linea.html
@@ -23,7 +23,7 @@
     <div id="menu" class="btn-group" role="group" aria-label="Basic example"></div><br><br>
 
     <form novalidate>
-      <label for="nombre">Nombre de la Linea: <span class="req">*</span></label>
+      <label for="nombre">Nombre de la Linea:</label>
       <input type="text" class="form-control-plaintext" id="linea" name="linea" placeholder="Nombre de la Linea" data-type="nombre" readonly>
       <br>
 
