--- a/views/ajustes.html
+++ b/views/ajustes.html
@@ -29,12 +29,6 @@
         </div>
       </div>
       <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">Correo</label>
-        <div class="col-sm-10">
-          <input type="email" class="form-control" name="correo" id="correo" value="DEFAULT" data-type="correo">
-        </div>
-      </div>
-      <div class="form-group row">
         <label for="inputPassword" class="col-sm-2 col-form-label">Apellido Paterno</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" name="apellidoP" id="apellidoP" value="DEFAULT" data-type="nombre">
@@ -47,7 +41,13 @@
         </div>
       </div>
       <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">curriculum</label>
+        <label for="inputPassword" class="col-sm-2 col-form-label">Correo</label>
+        <div class="col-sm-10">
+          <input type="email" class="form-control" name="correo" id="correo" value="DEFAULT" data-type="correo">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="inputPassword" class="col-sm-2 col-form-label">Curriculum</label>
         <div class="col-sm-10">
           <textarea class="form-control" name="curriculum" id="curriculum" rows="3" data-type="curriculum">DEFAULT</textarea>
         </div>
@@ -87,6 +87,7 @@
   <script src="../js/bootstrap.min.js" type="text/javascript"></script>
   <script src="../js/alertify.min.js" type="text/javascript"></script>
   <script src="../js/js.cookie.js" type="text/javascript"></script>
+  <script src="../js/md5.min.js" type="text/javascript"></script>
   <!-- VISTAS -->
   <script src="../js/validation.js" type="text/javascript"></script>
   <script src="../js/navegation.js" type="text/javascript"></script>
