--- a/views/descubre.html
+++ b/views/descubre.html
@@ -13,7 +13,7 @@
   <!-- NAV SE AGREGA CON JQUERY -->
   <div id="navegation"></div>
 
-  <section class="jumbotron">
+  <section class="jumbotron" novalidate>
     <form class="container">
       <div class="row">
         <div class="col">
@@ -53,6 +53,7 @@
   <script src="../js/bootstrap.min.js" type="text/javascript"></script>
   <script src="../js/alertify.min.js" type="text/javascript"></script>
   <script src="../js/js.cookie.js" type="text/javascript"></script>
+  <script src="../js/logs.js" type="text/javascript"></script>
   <!-- VISTAS -->
   <script src="../js/validation.js" type="text/javascript"></script>
   <script src="../js/navegation.js" type="text/javascript"></script>
