--- a/views/crear/productividad.html
+++ b/views/crear/productividad.html
@@ -32,7 +32,7 @@
       </select>
 
       <label for="nombre">No. Regirstro: <span class="req">*</span></label>
-      <input type="text" class="form-control" id="no_registro" name="no_registro" placeholder="no_registro" data-type="nombre">
+      <input type="text" class="form-control" id="no_registro" name="no_registro" placeholder="No. de Registro" data-type="nombre">
 
       <br>
       <button type="button" id="btn_subir" class="btn btn-primary">Subir</button>
@@ -44,6 +44,7 @@
   <script src="../../js/bootstrap.min.js" type="text/javascript"></script>
   <script src="../../js/alertify.min.js" type="text/javascript"></script>
   <script src="../../js/js.cookie.js" type="text/javascript"></script>
+  <script src="../../js/logs.js" type="text/javascript"></script>
   <!-- VISTAS -->
   <script src="../../js/validation.js" type="text/javascript"></script>
   <script src="../../js/subnavegation.js" type="text/javascript"></script>
