--- a/views/crear/proyecto.html
+++ b/views/crear/proyecto.html
@@ -14,7 +14,7 @@
   <div id="navegation"></div>
 
   <section class="jumbotron">
-    <h1 class="display-4 text-center">Producción académica</h1>
+    <h1 class="display-4 text-center">Proyectos de investigación aplicada y proyectos tecnológicos</h1>
   </section>
 
   <section class="container">
@@ -40,6 +40,7 @@
   <script src="../../js/bootstrap.min.js" type="text/javascript"></script>
   <script src="../../js/alertify.min.js" type="text/javascript"></script>
   <script src="../../js/js.cookie.js" type="text/javascript"></script>
+  <script src="../../js/logs.js" type="text/javascript"></script>
   <!-- VISTAS -->
   <script src="../../js/validation.js" type="text/javascript"></script>
   <script src="../../js/subnavegation.js" type="text/javascript"></script>
