--- a/views/login.html
+++ b/views/login.html
@@ -32,6 +32,7 @@
   <script src="../js/bootstrap.min.js" type="text/javascript"></script>
   <script src="../js/alertify.min.js" type="text/javascript"></script>
   <script src="../js/js.cookie.js" type="text/javascript"></script>
+  <script src="../js/logs.js" type="text/javascript"></script>
   <script src="../js/md5.min.js" type="text/javascript"></script>
   <!-- VISTAS -->
   <script src="../js/validation.js" type="text/javascript"></script>
