--- a/views/perfil.html
+++ b/views/perfil.html
@@ -15,8 +15,8 @@
 
   <style media="screen">
     #foto {
-      max-width: 200px;
-      max-height: 200px;
+      width: 200px;
+      height: 200px;
       border-radius: 50%;
       border: solid 1px gray;
       background-color: white;
@@ -44,6 +44,7 @@
   <script src="../js/bootstrap.min.js" type="text/javascript"></script>
   <script src="../js/alertify.min.js" type="text/javascript"></script>
   <script src="../js/js.cookie.js" type="text/javascript"></script>
+  <script src="../js/logs.js" type="text/javascript"></script>
   <!-- VISTAS -->
   <script src="../js/validation.js" type="text/javascript"></script>
   <script src="../js/navegation.js" type="text/javascript"></script>
