--- a/views/vista/linea.html
+++ b/views/vista/linea.html
@@ -37,6 +37,7 @@
   <script src="../../js/bootstrap.min.js" type="text/javascript"></script>
   <script src="../../js/alertify.min.js" type="text/javascript"></script>
   <script src="../../js/js.cookie.js" type="text/javascript"></script>
+  <script src="../../js/logs.js" type="text/javascript"></script>
   <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
   <!-- VISTAS -->
   <script src="../../js/validation.js" type="text/javascript"></script>
