--- a/views/index.html
+++ b/views/index.html
@@ -25,6 +25,41 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at gravida enim, nec tempor nulla. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi sed dignissim enim. Morbi placerat rutrum facilisis. Etiam blandit eget ex ac porttitor. Donec magna lectus, condimentum vel metus eu, iaculis commodo neque. In posuere erat lacinia neque vulputate, a condimentum nisl finibus. Etiam vitae mi sagittis, dictum turpis sollicitudin, elementum ipsum. Nam condimentum interdum tellus, ut suscipit arcu pharetra sit amet. Pellentesque laoreet suscipit metus. Pellentesque iaculis tellus tellus, eu hendrerit massa rutrum ac. Etiam a pharetra magna. Sed non suscipit felis. Quisque condimentum nibh imperdiet sem malesuada, non vulputate ligula malesuada. Pellentesque a purus sit amet odio lobortis ultricies. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
       </p>
     </div>
+    </section>
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="../img/carousel/carousel-1.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../img/carousel/carousel-2.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../img/carousel/carousel-3.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+
+
+
+
+
+    <section class="container">
     <div>
       <h2 class="text-center">Misión</h2>
       <p class="text-justify">
