Se agregaron enlaces para cada reporte de usuarios.

--- a/views/vista/arbitrado.html
+++ b/views/vista/arbitrado.html
@@ -25,20 +25,20 @@
     <div id="usuario"></div>
 
     <form novalidate>
-      <label for="nombre">Nombre: <span class="req">*</span></label>
+      <label for="nombre">Nombre: </label>
       <input type="text" class="form-control-plaintext" id="nombre" name="nombre" placeholder="Nombre del Articulo" data-type="nombre" readonly>
-      <label for="nombre">Autores: <span class="req">*</span></label>
+      <label for="nombre">Autores: </label>
       <input type="text" class="form-control-plaintext" id="autores" name="autores" placeholder="Autores" data-type="nombres" readonly>
-      <label for="nombre">Fecha: <span class="req">*</span></label>
+      <label for="nombre">Fecha: </label>
       <input type="date" class="form-control-plaintext" id="fecha" name="fecha" data-type="fecha" readonly>
 
       <label for="linea">Linea:</label>
       <select class="form-control-plaintext" id="linea" disabled>
       </select>
 
-      <label for="nombre">ISSN: <span class="req">*</span></label>
+      <label for="nombre">ISSN: </label>
       <input type="text" class="form-control-plaintext" id="issn" name="issn" placeholder="ISSN" data-type="nombre" readonly>
-      <label for="nombre">Nombre de Revista: <span class="req">*</span></label>
+      <label for="nombre">Nombre de Revista: </label>
       <input type="text" class="form-control-plaintext" id="nom_revista" name="nom_revista" placeholder="Nombre del Alumno" data-type="nombre" readonly>
       <br>
 
