--- a/views/vista/linea.html
+++ b/views/vista/linea.html
@@ -22,6 +22,8 @@
     <!-- LINEA NUEVA-->
     <div id="menu" class="btn-group" role="group" aria-label="Basic example"></div><br><br>
 
+    <div id="usuario"></div>
+
     <form novalidate>
       <label for="nombre">Nombre de la Linea:</label>
       <input type="text" class="form-control-plaintext" id="linea" name="linea" placeholder="Nombre de la Linea" data-type="nombre" readonly>
