--- a/views/vista/proyecto.html
+++ b/views/vista/proyecto.html
@@ -22,16 +22,18 @@
         <!-- LINEA NUEVA-->
         <div id="menu" class="btn-group" role="group" aria-label="Basic example"></div><br><br>
 
+        <div id="usuario"></div>
+
     <form novalidate>
-      <label for="nombre">Nombre del Proyecto: <span class="req">*</span></label>
+      <label for="nombre">Nombre del Proyecto: </label>
       <input type="text" class="form-control-plaintext" id="nombre" name="nombre" placeholder="Nombre del Proyecto" data-type="nombre" readonly>
-      <label for="nombre">Fecha de Inicio: <span class="req">*</span></label>
+      <label for="nombre">Fecha de Inicio: </label>
       <input type="date" class="form-control-plaintext" id="fecha_inicio" name="fecha_inicio" data-type="fecha" readonly>
-      <label for="nombre">Fecha de Fin: <span class="req">*</span></label>
+      <label for="nombre">Fecha de Fin: </label>
       <input type="date" class="form-control-plaintext" id="fecha_fin" name="fecha_fin" data-type="fecha" readonly>
-      <label for="nombre">Colaboradores: <span class="req">*</span></label>
+      <label for="nombre">Colaboradores: </label>
       <input type="text" class="form-control-plaintext" id="colaboradores" name="colaboradores" placeholder="Colaboradores" data-type="nombres" readonly>
-      <label for="nombre">Instituciones: <span class="req">*</span></label>
+      <label for="nombre">Instituciones: </label>
       <input type="text" class="form-control-plaintext" id="instituciones" name="instituciones" placeholder="Instituciones" data-type="nombres" readonly>
       <br>
 
