--- a/views/vista/direccion.html
+++ b/views/vista/direccion.html
@@ -22,16 +22,18 @@
     <!-- LINEA NUEVA-->
     <div id="menu" class="btn-group" role="group" aria-label="Basic example"></div><br><br>
 
+    <div id="usuario"></div>
+
     <form novalidate>
-      <label for="nombre">Nombre del Proyecto: <span class="req">*</span></label>
+      <label for="nombre">Nombre del Proyecto: </label>
       <input type="text" class="form-control-plaintext" id="nombre" name="nombre" placeholder="Nombre del Proyecto" data-type="nombre" readonly>
-      <label for="nombre">Fecha de Inicio: <span class="req">*</span></label>
+      <label for="nombre">Fecha de Inicio: </label>
       <input type="date" class="form-control-plaintext" id="fecha_inicio" name="fecha_inicio" data-type="fecha" readonly>
-      <label for="nombre">Fecha de Fin: <span class="req">*</span></label>
+      <label for="nombre">Fecha de Fin: </label>
       <input type="date" class="form-control-plaintext" id="fecha_fin" name="fecha_fin" data-type="fecha" readonly>
-      <label for="nombre">Nombre de la Empresa: <span class="req">*</span></label>
+      <label for="nombre">Nombre de la Empresa: </label>
       <input type="text" class="form-control-plaintext" id="nombre_empresa" name="colaboradores" placeholder="Nombre de la Empresa" data-type="nombreCompleto" readonly>
-      <label for="nombre">Nombre del Alumno: <span class="req">*</span></label>
+      <label for="nombre">Nombre del Alumno: </label>
       <input type="text" class="form-control-plaintext" id="nombre_alumno" name="instituciones" placeholder="Nombre del Alumno" data-type="nombreCompleto" readonly>
       <br>
 
