--- a/views/vista/memorias.html
+++ b/views/vista/memorias.html
@@ -22,21 +22,23 @@
     <!-- LINEA NUEVA-->
     <div id="menu" class="btn-group" role="group" aria-label="Basic example"></div><br><br>
 
+    <div id="usuario"></div>
+
     <form novalidate>
-      <label for="nombre">Nombre: <span class="req">*</span></label>
+      <label for="nombre">Nombre: </label>
       <input type="text" class="form-control-plaintext" readonly id="nombre" name="nombre" placeholder="Nombre del Capitulo" data-type="nombre">
-      <label for="nombre">Autores: <span class="req">*</span></label>
+      <label for="nombre">Autores: </label>
       <input type="text" class="form-control-plaintext" readonly id="autores" name="autores" placeholder="Autores" data-type="nombres">
-      <label for="nombre">Fecha: <span class="req">*</span></label>
+      <label for="nombre">Fecha: </label>
       <input type="date" class="form-control-plaintext" readonly id="fecha" name="fecha" data-type="fecha">
 
       <label for="linea">Linea:</label>
       <select class="form-control-plaintext" id="linea" disabled>
       </select>
 
-      <label for="nombre">ISBN: <span class="req">*</span></label>
+      <label for="nombre">ISBN: </label>
       <input type="text" class="form-control-plaintext" readonly id="isbn" name="isbn" placeholder="ISBN" data-type="nombre">
-      <label for="nombre">Nombre de Libro: <span class="req">*</span></label>
+      <label for="nombre">Nombre de Libro: </label>
       <input type="text" class="form-control-plaintext" readonly id="nom_libro" name="nom_libro" placeholder="Nombre del Alumno" data-type="nombre">
       <br>
 
