--- a/views/vista/prototipo.html
+++ b/views/vista/prototipo.html
@@ -22,20 +22,22 @@
     <!-- LINEA NUEVA-->
     <div id="menu" class="btn-group" role="group" aria-label="Basic example"></div><br><br>
 
+    <div id="usuario"></div>
+
 
     <form novalidate>
-      <label for="nombre">Nombre: <span class="req">*</span></label>
+      <label for="nombre">Nombre: </label>
       <input type="text" class="form-control-plaintext" id="nombre" name="nombre" placeholder="Nombre del Articulo" data-type="nombre" readonly>
-      <label for="nombre">Autores: <span class="req">*</span></label>
+      <label for="nombre">Autores: </label>
       <input type="text" class="form-control-plaintext" id="autores" name="autores" placeholder="Autores" data-type="nombres" readonly>
-      <label for="nombre">Fecha: <span class="req">*</span></label>
+      <label for="nombre">Fecha: </label>
       <input type="date" class="form-control-plaintext" id="fecha" name="fecha" data-type="fecha" readonly>
 
       <label for="linea">Linea:</label>
       <select class="form-control-plaintext" id="linea" disabled>
       </select>
 
-      <label for="nombre">No. Regirstro: <span class="req">*</span></label>
+      <label for="nombre">No. Regirstro: </label>
       <input type="text" class="form-control-plaintext" readonly id="no_registro" name="no_registro" placeholder="No. de Registro" data-type="nombre">
       <br>
 
