--- a/views/vista/revista.html
+++ b/views/vista/revista.html
@@ -22,22 +22,24 @@
     <!-- LINEA NUEVA-->
     <div id="menu" class="btn-group" role="group" aria-label="Basic example"></div><br><br>
 
+    <div id="usuario"></div>
+
 
     <form novalidate>
-      <label for="nombre">Nombre: <span class="req">*</span></label>
+      <label for="nombre">Nombre: </label>
       <input type="text" class="form-control-plaintext" readonly id="nombre" name="nombre" placeholder="Nombre del Articulo" data-type="nombre">
-      <label for="nombre">Autores: <span class="req">*</span></label>
+      <label for="nombre">Autores: </label>
       <input type="text" class="form-control-plaintext" readonly id="autores" name="autores" placeholder="Autores" data-type="nombres">
-      <label for="nombre">Fecha: <span class="req">*</span></label>
+      <label for="nombre">Fecha: </label>
       <input type="date" class="form-control-plaintext" readonly id="fecha" name="fecha" data-type="fecha">
 
       <label for="linea">Linea:</label>
       <select class="form-control-plaintext" readonly id="linea" disabled>
       </select>
 
-      <label for="nombre">ISSN: <span class="req">*</span></label>
+      <label for="nombre">ISSN: </label>
       <input type="text" class="form-control-plaintext" readonly id="issn" name="issn" placeholder="ISSN" data-type="nombre">
-      <label for="nombre">Nombre de Revista: <span class="req">*</span></label>
+      <label for="nombre">Nombre de Revista: </label>
       <input type="text" class="form-control-plaintext" readonly id="nom_revista" name="nom_revista" placeholder="Nombre del Alumno" data-type="nombre">
       <br>
 
